Ajout navigation menu

--- a/starter/sass/main.scss
+++ b/starter/sass/main.scss
@@ -19,8 +19,10 @@
 @import "layout/header";
 @import "layout/grid";
 @import "layout/footer";
+@import "layout/navigation";
 
 @import "pages/home";
+
 
 /* id > class > element */
 
